tests/NormalTests/paczka1/fuzzy1/70919286.err
Error in line 3: fYsXm S178 2,5
Error in line 9: Bw9ehnc S178 36,5
Error in line 11: Bw9ehnc S407 18,6
Error in line 13: uqm S407 67,7
Error in line 5: fYsXm A426 67,5
Error in line 12: Bw9ehnc S178 21,3
Error in line 16: vAFWCLcQ6 S178 46,7
Error in line 18: Bw9ehnc S14 67,6
Error in line 30: Bw9ehnc S14 43,5
Error in line 34: 05E S14 92,7
Error in line 36: 05E A426 68,2
Error in line 37: 05E S178 74,0
